--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@ max-width: 500px;
 margin: 70px auto;
 
 background-color: #fff;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+border-radius: 10px;
 
 
-padding: 20px 30px;
+padding: 20px 20px;
 }
 label{
     display: block;
@@ -37,23 +39,29 @@ label{
    
 input
 {
-    width: 95%;
+    width: 100%;
     border: 1px solid #777;
     border-radius: 2px;
     padding: 10px;
     font-family: inherit;
-   font-weight: 1px;
+    font-weight: 1px;
 }
 button
 {
     display: block;
-    width: 95%;
+    width: 100%;
     margin: 20px 0 20px 0;
     background-color: #05c46b;
     padding: 10px;
     font-family: inherit;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
+button:hover
+{
+    background-color: #13a762;
 
+}
 
 .error-message
 {
