--- a/login.html
+++ b/login.html
@@ -25,9 +25,10 @@ max-width: 500px;
 margin: 70px auto;
 
 background-color: #fff;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0,0,0,0.1);
 
-
-padding: 20px 30px;
+padding: 20px 20px;
 }
 label{
 display: block;
@@ -37,7 +38,7 @@ margin:10px 0 10px 0 ;
 
 input
 {
-width: 95%;
+width: 100%;
 border: 1px solid #777;
 border-radius: 2px;
 padding: 10px;
@@ -47,13 +48,18 @@ font-weight: 1px;
 button
 {
 display: block;
-width: 95%;
+width: 100%;
 margin: 20px 0 20px 0;
 background-color: #05c46b;
 padding: 10px;
 font-family: inherit;
+transform: background-color 0.3s ease;
+border-radius: 5px;
 }
-
+button:hover
+{
+    background-color: #13a762;
+}
 img
 {
     max-height:150px ;
